tryphon_macros/tests/ui/pass/enum_decoder.rs
use tryphon::ConfigValueDecoder;

#[derive(ConfigValueDecoder)]
enum LogLevel {
    Debug,
    Info,
    Warn,
    Error,
}

fn main() {}
