tryphon_macros/tests/ui/fail/enum_struct_variant.rs
use tryphon::ConfigValueDecoder;

#[derive(ConfigValueDecoder)]
enum BadLevel {
    Complex { x: i32, y: i32 },
}

fn main() {}
